[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyheartradio"
dynamic = ["version"]
description = "iHeartRadio API client"
license = { text = "Apache-2.0" }
authors = [{ name = "JarbasAi", email = "jarbasai@mailfence.com" }]
requires-python = ">=3.8"
dependencies = ["requests"]

[project.optional-dependencies]
test = ["pytest", "pytest-timeout", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/JarbasAl/pyheartradio"

[tool.setuptools.dynamic]
version = { attr = "pyheartradio.version.__version__" }

[tool.setuptools.packages.find]
include = ["pyheartradio*"]
